cgi/y.output
   0  $accept : start $end

   1  start :
   2        | statement_list

   3  statement_list : statement EOL
   4                 | statement_list statement EOL

   5  statement : connect_statement
   6            | set_statement
   7            | print_statement
   8            | printrows_statement
   9            | printattr_statement
  10            | printheader_statement
  11            | query_statement
  12            | database_statement
  13            | free_statement
  14            | if_statement
  15            | nextrow_statement
  16            | exec_statement
  17            | pipe_statement
  18            | crypt_statement
  19            | user_statement
  20            | default_statement
  21            | opentcp_statement
  22            | readtcp_statement
  23            | writetcp_statement

  24  connect_statement : CONNECT
  25                    | CONNECT STRING
  26                    | CONNECT STRING NUMBER

  27  database_statement : DATABASE IDENTIFIER

  28  free_statement : FREE IDENTIFIER

  29  $$1 :

  30  if_statement : IF condition EOL THEN EOL $$1 if_part2

  31  if_part2 : start FI
  32           | start ELSE start FI

  33  print_statement : PRINT expression

  34  printrows_statement : PRINTROWS IDENTIFIER STRING

  35  printattr_statement : PRINTATTR IDENTIFIER STRING STRING STRING

  36  printheader_statement : PRINTHEADER IDENTIFIER STRING

  37  nextrow_statement : GETROW IDENTIFIER

  38  set_statement : SET VARIABLE EQUALS expression

  39  crypt_statement : CRYPT VARIABLE

  40  query_statement : QUERY STRING IDENTIFIER
  41                  | QUERY VARIABLE IDENTIFIER

  42  default_statement : DEFAULT IDENTIFIER STRING

  43  exec_statement : EXEC STRING
  44                 | EXEC VARIABLE EQUALS STRING

  45  pipe_statement : PIPE VARIABLE EQUALS STRING

  46  opentcp_statement : OPENTCP IDENTIFIER EQUALS STRING STRING
  47                    | OPENTCP IDENTIFIER EQUALS STRING NUMBER

  48  readtcp_statement : READTCP IDENTIFIER VARIABLE

  49  writetcp_statement : WRITETCP IDENTIFIER STRING

  50  condition : single_condition
  51            | single_condition AND condition
  52            | single_condition OR condition
  53            | NOT single_condition

  54  single_condition : expression EQ expression
  55                   | expression LESS expression
  56                   | expression MORE expression
  57                   | expression LESSEQ expression
  58                   | expression MOREEQ expression
  59                   | expression NOTEQ expression
  60                   | OPENPAREN condition CLOSEPAREN

  61  expression : value
  62             | expression PLUS expression
  63             | expression MINUS expression
  64             | expression STAR expression
  65             | expression SLASH expression
  66             | OPENPAREN expression CLOSEPAREN

  67  value : literal
  68        | VARIABLE

  69  literal : STRING
  70          | NUMBER

  71  user_statement : USER STRING

state 0
	$accept : . start $end  (0)
	start : .  (1)

	CONNECT  shift 1
	SET  shift 2
	PRINT  shift 3
	QUERY  shift 4
	DATABASE  shift 5
	FREE  shift 6
	PRINTROWS  shift 7
	IF  shift 8
	GETROW  shift 9
	EXEC  shift 10
	CRYPT  shift 11
	USER  shift 12
	PRINTATTR  shift 13
	PRINTHEADER  shift 14
	DEFAULT  shift 15
	PIPE  shift 16
	OPENTCP  shift 17
	READTCP  shift 18
	WRITETCP  shift 19
	$end  reduce 1

	start  goto 20
	statement_list  goto 21
	statement  goto 22
	connect_statement  goto 23
	set_statement  goto 24
	print_statement  goto 25
	printrows_statement  goto 26
	printattr_statement  goto 27
	printheader_statement  goto 28
	query_statement  goto 29
	database_statement  goto 30
	free_statement  goto 31
	if_statement  goto 32
	nextrow_statement  goto 33
	exec_statement  goto 34
	pipe_statement  goto 35
	crypt_statement  goto 36
	user_statement  goto 37
	default_statement  goto 38
	opentcp_statement  goto 39
	readtcp_statement  goto 40
	writetcp_statement  goto 41


state 1
	connect_statement : CONNECT .  (24)
	connect_statement : CONNECT . STRING  (25)
	connect_statement : CONNECT . STRING NUMBER  (26)

	STRING  shift 42
	EOL  reduce 24


state 2
	set_statement : SET . VARIABLE EQUALS expression  (38)

	VARIABLE  shift 43
	.  error


state 3
	print_statement : PRINT . expression  (33)

	OPENPAREN  shift 44
	VARIABLE  shift 45
	STRING  shift 46
	NUMBER  shift 47
	.  error

	expression  goto 48
	literal  goto 49
	value  goto 50


state 4
	query_statement : QUERY . STRING IDENTIFIER  (40)
	query_statement : QUERY . VARIABLE IDENTIFIER  (41)

	VARIABLE  shift 51
	STRING  shift 52
	.  error


state 5
	database_statement : DATABASE . IDENTIFIER  (27)

	IDENTIFIER  shift 53
	.  error


state 6
	free_statement : FREE . IDENTIFIER  (28)

	IDENTIFIER  shift 54
	.  error


state 7
	printrows_statement : PRINTROWS . IDENTIFIER STRING  (34)

	IDENTIFIER  shift 55
	.  error


state 8
	if_statement : IF . condition EOL THEN EOL $$1 if_part2  (30)

	OPENPAREN  shift 56
	NOT  shift 57
	VARIABLE  shift 45
	STRING  shift 46
	NUMBER  shift 47
	.  error

	expression  goto 58
	literal  goto 49
	value  goto 50
	single_condition  goto 59
	condition  goto 60


state 9
	nextrow_statement : GETROW . IDENTIFIER  (37)

	IDENTIFIER  shift 61
	.  error


state 10
	exec_statement : EXEC . STRING  (43)
	exec_statement : EXEC . VARIABLE EQUALS STRING  (44)

	VARIABLE  shift 62
	STRING  shift 63
	.  error


state 11
	crypt_statement : CRYPT . VARIABLE  (39)

	VARIABLE  shift 64
	.  error


state 12
	user_statement : USER . STRING  (71)

	STRING  shift 65
	.  error


state 13
	printattr_statement : PRINTATTR . IDENTIFIER STRING STRING STRING  (35)

	IDENTIFIER  shift 66
	.  error


state 14
	printheader_statement : PRINTHEADER . IDENTIFIER STRING  (36)

	IDENTIFIER  shift 67
	.  error


state 15
	default_statement : DEFAULT . IDENTIFIER STRING  (42)

	IDENTIFIER  shift 68
	.  error


state 16
	pipe_statement : PIPE . VARIABLE EQUALS STRING  (45)

	VARIABLE  shift 69
	.  error


state 17
	opentcp_statement : OPENTCP . IDENTIFIER EQUALS STRING STRING  (46)
	opentcp_statement : OPENTCP . IDENTIFIER EQUALS STRING NUMBER  (47)

	IDENTIFIER  shift 70
	.  error


state 18
	readtcp_statement : READTCP . IDENTIFIER VARIABLE  (48)

	IDENTIFIER  shift 71
	.  error


state 19
	writetcp_statement : WRITETCP . IDENTIFIER STRING  (49)

	IDENTIFIER  shift 72
	.  error


state 20
	$accept : start . $end  (0)

	$end  accept


state 21
	start : statement_list .  (2)
	statement_list : statement_list . statement EOL  (4)

	CONNECT  shift 1
	SET  shift 2
	PRINT  shift 3
	QUERY  shift 4
	DATABASE  shift 5
	FREE  shift 6
	PRINTROWS  shift 7
	IF  shift 8
	GETROW  shift 9
	EXEC  shift 10
	CRYPT  shift 11
	USER  shift 12
	PRINTATTR  shift 13
	PRINTHEADER  shift 14
	DEFAULT  shift 15
	PIPE  shift 16
	OPENTCP  shift 17
	READTCP  shift 18
	WRITETCP  shift 19
	$end  reduce 2
	ELSE  reduce 2
	FI  reduce 2

	statement  goto 73
	connect_statement  goto 23
	set_statement  goto 24
	print_statement  goto 25
	printrows_statement  goto 26
	printattr_statement  goto 27
	printheader_statement  goto 28
	query_statement  goto 29
	database_statement  goto 30
	free_statement  goto 31
	if_statement  goto 32
	nextrow_statement  goto 33
	exec_statement  goto 34
	pipe_statement  goto 35
	crypt_statement  goto 36
	user_statement  goto 37
	default_statement  goto 38
	opentcp_statement  goto 39
	readtcp_statement  goto 40
	writetcp_statement  goto 41


state 22
	statement_list : statement . EOL  (3)

	EOL  shift 74
	.  error


state 23
	statement : connect_statement .  (5)

	.  reduce 5


state 24
	statement : set_statement .  (6)

	.  reduce 6


state 25
	statement : print_statement .  (7)

	.  reduce 7


state 26
	statement : printrows_statement .  (8)

	.  reduce 8


state 27
	statement : printattr_statement .  (9)

	.  reduce 9


state 28
	statement : printheader_statement .  (10)

	.  reduce 10


state 29
	statement : query_statement .  (11)

	.  reduce 11


state 30
	statement : database_statement .  (12)

	.  reduce 12


state 31
	statement : free_statement .  (13)

	.  reduce 13


state 32
	statement : if_statement .  (14)

	.  reduce 14


state 33
	statement : nextrow_statement .  (15)

	.  reduce 15


state 34
	statement : exec_statement .  (16)

	.  reduce 16


state 35
	statement : pipe_statement .  (17)

	.  reduce 17


state 36
	statement : crypt_statement .  (18)

	.  reduce 18


state 37
	statement : user_statement .  (19)

	.  reduce 19


state 38
	statement : default_statement .  (20)

	.  reduce 20


state 39
	statement : opentcp_statement .  (21)

	.  reduce 21


state 40
	statement : readtcp_statement .  (22)

	.  reduce 22


state 41
	statement : writetcp_statement .  (23)

	.  reduce 23


state 42
	connect_statement : CONNECT STRING .  (25)
	connect_statement : CONNECT STRING . NUMBER  (26)

	NUMBER  shift 75
	EOL  reduce 25


state 43
	set_statement : SET VARIABLE . EQUALS expression  (38)

	EQUALS  shift 76
	.  error


state 44
	expression : OPENPAREN . expression CLOSEPAREN  (66)

	OPENPAREN  shift 44
	VARIABLE  shift 45
	STRING  shift 46
	NUMBER  shift 47
	.  error

	expression  goto 77
	literal  goto 49
	value  goto 50


state 45
	value : VARIABLE .  (68)

	.  reduce 68


state 46
	literal : STRING .  (69)

	.  reduce 69


state 47
	literal : NUMBER .  (70)

	.  reduce 70


state 48
	print_statement : PRINT expression .  (33)
	expression : expression . PLUS expression  (62)
	expression : expression . MINUS expression  (63)
	expression : expression . STAR expression  (64)
	expression : expression . SLASH expression  (65)

	PLUS  shift 78
	MINUS  shift 79
	STAR  shift 80
	SLASH  shift 81
	EOL  reduce 33


state 49
	value : literal .  (67)

	.  reduce 67


state 50
	expression : value .  (61)

	.  reduce 61


state 51
	query_statement : QUERY VARIABLE . IDENTIFIER  (41)

	IDENTIFIER  shift 82
	.  error


state 52
	query_statement : QUERY STRING . IDENTIFIER  (40)

	IDENTIFIER  shift 83
	.  error


state 53
	database_statement : DATABASE IDENTIFIER .  (27)

	.  reduce 27


state 54
	free_statement : FREE IDENTIFIER .  (28)

	.  reduce 28


state 55
	printrows_statement : PRINTROWS IDENTIFIER . STRING  (34)

	STRING  shift 84
	.  error


state 56
	single_condition : OPENPAREN . condition CLOSEPAREN  (60)
	expression : OPENPAREN . expression CLOSEPAREN  (66)

	OPENPAREN  shift 56
	NOT  shift 57
	VARIABLE  shift 45
	STRING  shift 46
	NUMBER  shift 47
	.  error

	expression  goto 85
	literal  goto 49
	value  goto 50
	single_condition  goto 59
	condition  goto 86


state 57
	condition : NOT . single_condition  (53)

	OPENPAREN  shift 56
	VARIABLE  shift 45
	STRING  shift 46
	NUMBER  shift 47
	.  error

	expression  goto 58
	literal  goto 49
	value  goto 50
	single_condition  goto 87


state 58
	single_condition : expression . EQ expression  (54)
	single_condition : expression . LESS expression  (55)
	single_condition : expression . MORE expression  (56)
	single_condition : expression . LESSEQ expression  (57)
	single_condition : expression . MOREEQ expression  (58)
	single_condition : expression . NOTEQ expression  (59)
	expression : expression . PLUS expression  (62)
	expression : expression . MINUS expression  (63)
	expression : expression . STAR expression  (64)
	expression : expression . SLASH expression  (65)

	EQ  shift 88
	NOTEQ  shift 89
	LESS  shift 90
	LESSEQ  shift 91
	MORE  shift 92
	MOREEQ  shift 93
	PLUS  shift 78
	MINUS  shift 79
	STAR  shift 80
	SLASH  shift 81
	.  error


state 59
	condition : single_condition .  (50)
	condition : single_condition . AND condition  (51)
	condition : single_condition . OR condition  (52)

	AND  shift 94
	OR  shift 95
	CLOSEPAREN  reduce 50
	EOL  reduce 50


state 60
	if_statement : IF condition . EOL THEN EOL $$1 if_part2  (30)

	EOL  shift 96
	.  error


state 61
	nextrow_statement : GETROW IDENTIFIER .  (37)

	.  reduce 37


state 62
	exec_statement : EXEC VARIABLE . EQUALS STRING  (44)

	EQUALS  shift 97
	.  error


state 63
	exec_statement : EXEC STRING .  (43)

	.  reduce 43


state 64
	crypt_statement : CRYPT VARIABLE .  (39)

	.  reduce 39


state 65
	user_statement : USER STRING .  (71)

	.  reduce 71


state 66
	printattr_statement : PRINTATTR IDENTIFIER . STRING STRING STRING  (35)

	STRING  shift 98
	.  error


state 67
	printheader_statement : PRINTHEADER IDENTIFIER . STRING  (36)

	STRING  shift 99
	.  error


state 68
	default_statement : DEFAULT IDENTIFIER . STRING  (42)

	STRING  shift 100
	.  error


state 69
	pipe_statement : PIPE VARIABLE . EQUALS STRING  (45)

	EQUALS  shift 101
	.  error


state 70
	opentcp_statement : OPENTCP IDENTIFIER . EQUALS STRING STRING  (46)
	opentcp_statement : OPENTCP IDENTIFIER . EQUALS STRING NUMBER  (47)

	EQUALS  shift 102
	.  error


state 71
	readtcp_statement : READTCP IDENTIFIER . VARIABLE  (48)

	VARIABLE  shift 103
	.  error


state 72
	writetcp_statement : WRITETCP IDENTIFIER . STRING  (49)

	STRING  shift 104
	.  error


state 73
	statement_list : statement_list statement . EOL  (4)

	EOL  shift 105
	.  error


state 74
	statement_list : statement EOL .  (3)

	.  reduce 3


state 75
	connect_statement : CONNECT STRING NUMBER .  (26)

	.  reduce 26


state 76
	set_statement : SET VARIABLE EQUALS . expression  (38)

	OPENPAREN  shift 44
	VARIABLE  shift 45
	STRING  shift 46
	NUMBER  shift 47
	.  error

	expression  goto 106
	literal  goto 49
	value  goto 50


state 77
	expression : expression . PLUS expression  (62)
	expression : expression . MINUS expression  (63)
	expression : expression . STAR expression  (64)
	expression : expression . SLASH expression  (65)
	expression : OPENPAREN expression . CLOSEPAREN  (66)

	CLOSEPAREN  shift 107
	PLUS  shift 78
	MINUS  shift 79
	STAR  shift 80
	SLASH  shift 81
	.  error


state 78
	expression : expression PLUS . expression  (62)

	OPENPAREN  shift 44
	VARIABLE  shift 45
	STRING  shift 46
	NUMBER  shift 47
	.  error

	expression  goto 108
	literal  goto 49
	value  goto 50


state 79
	expression : expression MINUS . expression  (63)

	OPENPAREN  shift 44
	VARIABLE  shift 45
	STRING  shift 46
	NUMBER  shift 47
	.  error

	expression  goto 109
	literal  goto 49
	value  goto 50


state 80
	expression : expression STAR . expression  (64)

	OPENPAREN  shift 44
	VARIABLE  shift 45
	STRING  shift 46
	NUMBER  shift 47
	.  error

	expression  goto 110
	literal  goto 49
	value  goto 50


state 81
	expression : expression SLASH . expression  (65)

	OPENPAREN  shift 44
	VARIABLE  shift 45
	STRING  shift 46
	NUMBER  shift 47
	.  error

	expression  goto 111
	literal  goto 49
	value  goto 50


state 82
	query_statement : QUERY VARIABLE IDENTIFIER .  (41)

	.  reduce 41


state 83
	query_statement : QUERY STRING IDENTIFIER .  (40)

	.  reduce 40


state 84
	printrows_statement : PRINTROWS IDENTIFIER STRING .  (34)

	.  reduce 34


state 85
	single_condition : expression . EQ expression  (54)
	single_condition : expression . LESS expression  (55)
	single_condition : expression . MORE expression  (56)
	single_condition : expression . LESSEQ expression  (57)
	single_condition : expression . MOREEQ expression  (58)
	single_condition : expression . NOTEQ expression  (59)
	expression : expression . PLUS expression  (62)
	expression : expression . MINUS expression  (63)
	expression : expression . STAR expression  (64)
	expression : expression . SLASH expression  (65)
	expression : OPENPAREN expression . CLOSEPAREN  (66)

	CLOSEPAREN  shift 107
	EQ  shift 88
	NOTEQ  shift 89
	LESS  shift 90
	LESSEQ  shift 91
	MORE  shift 92
	MOREEQ  shift 93
	PLUS  shift 78
	MINUS  shift 79
	STAR  shift 80
	SLASH  shift 81
	.  error


state 86
	single_condition : OPENPAREN condition . CLOSEPAREN  (60)

	CLOSEPAREN  shift 112
	.  error


state 87
	condition : NOT single_condition .  (53)

	.  reduce 53


state 88
	single_condition : expression EQ . expression  (54)

	OPENPAREN  shift 44
	VARIABLE  shift 45
	STRING  shift 46
	NUMBER  shift 47
	.  error

	expression  goto 113
	literal  goto 49
	value  goto 50


state 89
	single_condition : expression NOTEQ . expression  (59)

	OPENPAREN  shift 44
	VARIABLE  shift 45
	STRING  shift 46
	NUMBER  shift 47
	.  error

	expression  goto 114
	literal  goto 49
	value  goto 50


state 90
	single_condition : expression LESS . expression  (55)

	OPENPAREN  shift 44
	VARIABLE  shift 45
	STRING  shift 46
	NUMBER  shift 47
	.  error

	expression  goto 115
	literal  goto 49
	value  goto 50


state 91
	single_condition : expression LESSEQ . expression  (57)

	OPENPAREN  shift 44
	VARIABLE  shift 45
	STRING  shift 46
	NUMBER  shift 47
	.  error

	expression  goto 116
	literal  goto 49
	value  goto 50


state 92
	single_condition : expression MORE . expression  (56)

	OPENPAREN  shift 44
	VARIABLE  shift 45
	STRING  shift 46
	NUMBER  shift 47
	.  error

	expression  goto 117
	literal  goto 49
	value  goto 50


state 93
	single_condition : expression MOREEQ . expression  (58)

	OPENPAREN  shift 44
	VARIABLE  shift 45
	STRING  shift 46
	NUMBER  shift 47
	.  error

	expression  goto 118
	literal  goto 49
	value  goto 50


state 94
	condition : single_condition AND . condition  (51)

	OPENPAREN  shift 56
	NOT  shift 57
	VARIABLE  shift 45
	STRING  shift 46
	NUMBER  shift 47
	.  error

	expression  goto 58
	literal  goto 49
	value  goto 50
	single_condition  goto 59
	condition  goto 119


state 95
	condition : single_condition OR . condition  (52)

	OPENPAREN  shift 56
	NOT  shift 57
	VARIABLE  shift 45
	STRING  shift 46
	NUMBER  shift 47
	.  error

	expression  goto 58
	literal  goto 49
	value  goto 50
	single_condition  goto 59
	condition  goto 120


state 96
	if_statement : IF condition EOL . THEN EOL $$1 if_part2  (30)

	THEN  shift 121
	.  error


state 97
	exec_statement : EXEC VARIABLE EQUALS . STRING  (44)

	STRING  shift 122
	.  error


state 98
	printattr_statement : PRINTATTR IDENTIFIER STRING . STRING STRING  (35)

	STRING  shift 123
	.  error


state 99
	printheader_statement : PRINTHEADER IDENTIFIER STRING .  (36)

	.  reduce 36


state 100
	default_statement : DEFAULT IDENTIFIER STRING .  (42)

	.  reduce 42


state 101
	pipe_statement : PIPE VARIABLE EQUALS . STRING  (45)

	STRING  shift 124
	.  error


state 102
	opentcp_statement : OPENTCP IDENTIFIER EQUALS . STRING STRING  (46)
	opentcp_statement : OPENTCP IDENTIFIER EQUALS . STRING NUMBER  (47)

	STRING  shift 125
	.  error


state 103
	readtcp_statement : READTCP IDENTIFIER VARIABLE .  (48)

	.  reduce 48


state 104
	writetcp_statement : WRITETCP IDENTIFIER STRING .  (49)

	.  reduce 49


state 105
	statement_list : statement_list statement EOL .  (4)

	.  reduce 4


state 106
	set_statement : SET VARIABLE EQUALS expression .  (38)
	expression : expression . PLUS expression  (62)
	expression : expression . MINUS expression  (63)
	expression : expression . STAR expression  (64)
	expression : expression . SLASH expression  (65)

	PLUS  shift 78
	MINUS  shift 79
	STAR  shift 80
	SLASH  shift 81
	EOL  reduce 38


state 107
	expression : OPENPAREN expression CLOSEPAREN .  (66)

	.  reduce 66


state 108
	expression : expression . PLUS expression  (62)
	expression : expression PLUS expression .  (62)
	expression : expression . MINUS expression  (63)
	expression : expression . STAR expression  (64)
	expression : expression . SLASH expression  (65)

	STAR  shift 80
	SLASH  shift 81
	CLOSEPAREN  reduce 62
	AND  reduce 62
	OR  reduce 62
	EQ  reduce 62
	NOTEQ  reduce 62
	LESS  reduce 62
	LESSEQ  reduce 62
	MORE  reduce 62
	MOREEQ  reduce 62
	EOL  reduce 62
	PLUS  reduce 62
	MINUS  reduce 62


state 109
	expression : expression . PLUS expression  (62)
	expression : expression . MINUS expression  (63)
	expression : expression MINUS expression .  (63)
	expression : expression . STAR expression  (64)
	expression : expression . SLASH expression  (65)

	STAR  shift 80
	SLASH  shift 81
	CLOSEPAREN  reduce 63
	AND  reduce 63
	OR  reduce 63
	EQ  reduce 63
	NOTEQ  reduce 63
	LESS  reduce 63
	LESSEQ  reduce 63
	MORE  reduce 63
	MOREEQ  reduce 63
	EOL  reduce 63
	PLUS  reduce 63
	MINUS  reduce 63


state 110
	expression : expression . PLUS expression  (62)
	expression : expression . MINUS expression  (63)
	expression : expression . STAR expression  (64)
	expression : expression STAR expression .  (64)
	expression : expression . SLASH expression  (65)

	.  reduce 64


state 111
	expression : expression . PLUS expression  (62)
	expression : expression . MINUS expression  (63)
	expression : expression . STAR expression  (64)
	expression : expression . SLASH expression  (65)
	expression : expression SLASH expression .  (65)

	.  reduce 65


state 112
	single_condition : OPENPAREN condition CLOSEPAREN .  (60)

	.  reduce 60


state 113
	single_condition : expression EQ expression .  (54)
	expression : expression . PLUS expression  (62)
	expression : expression . MINUS expression  (63)
	expression : expression . STAR expression  (64)
	expression : expression . SLASH expression  (65)

	PLUS  shift 78
	MINUS  shift 79
	STAR  shift 80
	SLASH  shift 81
	CLOSEPAREN  reduce 54
	AND  reduce 54
	OR  reduce 54
	EOL  reduce 54


state 114
	single_condition : expression NOTEQ expression .  (59)
	expression : expression . PLUS expression  (62)
	expression : expression . MINUS expression  (63)
	expression : expression . STAR expression  (64)
	expression : expression . SLASH expression  (65)

	PLUS  shift 78
	MINUS  shift 79
	STAR  shift 80
	SLASH  shift 81
	CLOSEPAREN  reduce 59
	AND  reduce 59
	OR  reduce 59
	EOL  reduce 59


state 115
	single_condition : expression LESS expression .  (55)
	expression : expression . PLUS expression  (62)
	expression : expression . MINUS expression  (63)
	expression : expression . STAR expression  (64)
	expression : expression . SLASH expression  (65)

	PLUS  shift 78
	MINUS  shift 79
	STAR  shift 80
	SLASH  shift 81
	CLOSEPAREN  reduce 55
	AND  reduce 55
	OR  reduce 55
	EOL  reduce 55


state 116
	single_condition : expression LESSEQ expression .  (57)
	expression : expression . PLUS expression  (62)
	expression : expression . MINUS expression  (63)
	expression : expression . STAR expression  (64)
	expression : expression . SLASH expression  (65)

	PLUS  shift 78
	MINUS  shift 79
	STAR  shift 80
	SLASH  shift 81
	CLOSEPAREN  reduce 57
	AND  reduce 57
	OR  reduce 57
	EOL  reduce 57


state 117
	single_condition : expression MORE expression .  (56)
	expression : expression . PLUS expression  (62)
	expression : expression . MINUS expression  (63)
	expression : expression . STAR expression  (64)
	expression : expression . SLASH expression  (65)

	PLUS  shift 78
	MINUS  shift 79
	STAR  shift 80
	SLASH  shift 81
	CLOSEPAREN  reduce 56
	AND  reduce 56
	OR  reduce 56
	EOL  reduce 56


state 118
	single_condition : expression MOREEQ expression .  (58)
	expression : expression . PLUS expression  (62)
	expression : expression . MINUS expression  (63)
	expression : expression . STAR expression  (64)
	expression : expression . SLASH expression  (65)

	PLUS  shift 78
	MINUS  shift 79
	STAR  shift 80
	SLASH  shift 81
	CLOSEPAREN  reduce 58
	AND  reduce 58
	OR  reduce 58
	EOL  reduce 58


state 119
	condition : single_condition AND condition .  (51)

	.  reduce 51


state 120
	condition : single_condition OR condition .  (52)

	.  reduce 52


state 121
	if_statement : IF condition EOL THEN . EOL $$1 if_part2  (30)

	EOL  shift 126
	.  error


state 122
	exec_statement : EXEC VARIABLE EQUALS STRING .  (44)

	.  reduce 44


state 123
	printattr_statement : PRINTATTR IDENTIFIER STRING STRING . STRING  (35)

	STRING  shift 127
	.  error


state 124
	pipe_statement : PIPE VARIABLE EQUALS STRING .  (45)

	.  reduce 45


state 125
	opentcp_statement : OPENTCP IDENTIFIER EQUALS STRING . STRING  (46)
	opentcp_statement : OPENTCP IDENTIFIER EQUALS STRING . NUMBER  (47)

	STRING  shift 128
	NUMBER  shift 129
	.  error


state 126
	if_statement : IF condition EOL THEN EOL . $$1 if_part2  (30)
	$$1 : .  (29)

	.  reduce 29

	$$1  goto 130


state 127
	printattr_statement : PRINTATTR IDENTIFIER STRING STRING STRING .  (35)

	.  reduce 35


state 128
	opentcp_statement : OPENTCP IDENTIFIER EQUALS STRING STRING .  (46)

	.  reduce 46


state 129
	opentcp_statement : OPENTCP IDENTIFIER EQUALS STRING NUMBER .  (47)

	.  reduce 47


state 130
	if_statement : IF condition EOL THEN EOL $$1 . if_part2  (30)
	start : .  (1)

	CONNECT  shift 1
	SET  shift 2
	PRINT  shift 3
	QUERY  shift 4
	DATABASE  shift 5
	FREE  shift 6
	PRINTROWS  shift 7
	IF  shift 8
	GETROW  shift 9
	EXEC  shift 10
	CRYPT  shift 11
	USER  shift 12
	PRINTATTR  shift 13
	PRINTHEADER  shift 14
	DEFAULT  shift 15
	PIPE  shift 16
	OPENTCP  shift 17
	READTCP  shift 18
	WRITETCP  shift 19
	ELSE  reduce 1
	FI  reduce 1

	start  goto 131
	statement_list  goto 21
	statement  goto 22
	connect_statement  goto 23
	set_statement  goto 24
	print_statement  goto 25
	printrows_statement  goto 26
	printattr_statement  goto 27
	printheader_statement  goto 28
	query_statement  goto 29
	database_statement  goto 30
	free_statement  goto 31
	if_statement  goto 32
	nextrow_statement  goto 33
	exec_statement  goto 34
	pipe_statement  goto 35
	crypt_statement  goto 36
	user_statement  goto 37
	default_statement  goto 38
	opentcp_statement  goto 39
	readtcp_statement  goto 40
	writetcp_statement  goto 41
	if_part2  goto 132


state 131
	if_part2 : start . FI  (31)
	if_part2 : start . ELSE start FI  (32)

	ELSE  shift 133
	FI  shift 134
	.  error


state 132
	if_statement : IF condition EOL THEN EOL $$1 if_part2 .  (30)

	.  reduce 30


state 133
	if_part2 : start ELSE . start FI  (32)
	start : .  (1)

	CONNECT  shift 1
	SET  shift 2
	PRINT  shift 3
	QUERY  shift 4
	DATABASE  shift 5
	FREE  shift 6
	PRINTROWS  shift 7
	IF  shift 8
	GETROW  shift 9
	EXEC  shift 10
	CRYPT  shift 11
	USER  shift 12
	PRINTATTR  shift 13
	PRINTHEADER  shift 14
	DEFAULT  shift 15
	PIPE  shift 16
	OPENTCP  shift 17
	READTCP  shift 18
	WRITETCP  shift 19
	FI  reduce 1

	start  goto 135
	statement_list  goto 21
	statement  goto 22
	connect_statement  goto 23
	set_statement  goto 24
	print_statement  goto 25
	printrows_statement  goto 26
	printattr_statement  goto 27
	printheader_statement  goto 28
	query_statement  goto 29
	database_statement  goto 30
	free_statement  goto 31
	if_statement  goto 32
	nextrow_statement  goto 33
	exec_statement  goto 34
	pipe_statement  goto 35
	crypt_statement  goto 36
	user_statement  goto 37
	default_statement  goto 38
	opentcp_statement  goto 39
	readtcp_statement  goto 40
	writetcp_statement  goto 41


state 134
	if_part2 : start FI .  (31)

	.  reduce 31


state 135
	if_part2 : start ELSE start . FI  (32)

	FI  shift 136
	.  error


state 136
	if_part2 : start ELSE start FI .  (32)

	.  reduce 32


45 terminals, 30 nonterminals
72 grammar rules, 137 states
